test/analyze/type_check/assignment/wildcard.myte
module test

fun main() {
  _ = 1;
  _ = true;
  (_, _) = (1, true);
  (_, _) = (1, (true, ""));

  // Mixed ids and wildcards (will print incorrect types)
  var x = ();
  var y = ();
  (x, _) = (1, (true, ""));
  (_, y) = (1, (true, ""));
}